Add rate limiting, input validation, and security.txt
- Implemented rate limiting for API calls:
  - 2 second cooldown between calculate requests
  - 1 second cooldown between region clicks
  - Prevents API abuse and excessive requests
- Added comprehensive input validation:
  - Validates cores (1-128, integer)
  - Validates memory (1-1024 GB, integer)
  - Provides clear error messages
- Created security.txt file following RFC 9116:
  - Contact information for security reports
  - Expiration date and preferred languages
  - Clear vulnerability reporting process
- Updated nginx.conf to serve security.txt with correct content type

These changes complete all recommended security enhancements.

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,11 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
+
+    # Security.txt file
+    location /.well-known/security.txt {
+        add_header Content-Type text/plain;
+    }
 }
 
 # Made with Bob
