--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "green-datacenter-selector",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,12 +13,12 @@
     "start": "serve -s dist -l 8080"
   },
   "dependencies": {
-    "@carbon/react": "^1.37.0",
+    "@carbon/react": "^1.100.0",
     "@vitejs/plugin-react": "^5.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.69.5",
-    "serve": "^14.2.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "sass": "^1.97.3",
+    "serve": "^14.2.5",
     "vite": "^7.3.1"
   }
 }
